# agentguard

./: .gitignore  CODE_ISSUES_FIXED.md  Cargo.toml  DEV_SESSION_SUMMARY.md  README.md  RELEASE_NOTES_v1.1.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  App.tsx.bak  App.tsx.bak2  api.ts  i18n.ts  mock.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Layout.tsx  Sidebar.tsx
apps/desktop/src/pages/: AuditPage.tsx  Dashboard.tsx  ProcessesPage.tsx  RulesPage.tsx  SettingsPage.tsx  SetupPage.tsx
crates/agentguard-daemon/: Cargo.toml
crates/agentguard-daemon/src/: lib.rs  main.rs
crates/agentguard-models/: Cargo.toml
crates/agentguard-models/src/: lib.rs
crates/agentguard-policy/: Cargo.toml
crates/agentguard-policy/src/: lib.rs
crates/agentguard-proxy/: Cargo.toml
crates/agentguard-proxy/src/: lib.rs  main.rs
crates/agentguard-proxy/tests/: approval_flow.rs
crates/agentguard-store/: Cargo.toml
crates/agentguard-store/src/: lib.rs
docs/: REALITY_CHECKLIST.md  ROADMAP.md  STATUS.md  architecture.md
scripts/: bootstrap-local.sh  run-live-demo.sh  stack-doctor.sh  start-latest.sh  start-local-stack.sh  stop-local-stack.sh  verify-reality.sh
scripts/release/: install-acceptance.sh  notarize-macos-app.sh  release-macos.sh  sign-macos-app.sh  verify-macos-app.sh
sdks/node/: package.json  tsconfig.json
sdks/node/src/: client.ts  errors.ts  index.ts  types.ts  wrappers.ts
sdks/node/test/: index.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: cli_agent.py  live_demo_agent.py  openai_chat_agent.py  openai_responses_agent.py
sdks/python/src/agentguard_sdk/: __init__.py  client.py  errors.py  openai_agent.py  responses_agent.py  types.py  wrappers.py
sdks/python/tests/: support.py  test_daemon_integration.py  test_openai_agent_proxy_integration.py  test_responses_agent_integration.py  test_responses_agent_proxy_integration.py  test_sdk.py
