[workspace]
members = [
    "crates/agentguard-daemon",
    "crates/agentguard-models",
    "crates/agentguard-policy",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
agentguard-models = { path = "crates/agentguard-models" }
agentguard-policy = { path = "crates/agentguard-policy" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

