[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/agentguard-daemon",
    "crates/agentguard-models",
    "crates/agentguard-policy",
    "crates/agentguard-proxy",
    "crates/agentguard-store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
agentguard-daemon = { path = "crates/agentguard-daemon" }
agentguard-models = { path = "crates/agentguard-models" }
agentguard-policy = { path = "crates/agentguard-policy" }
agentguard-proxy = { path = "crates/agentguard-proxy" }
agentguard-store = { path = "crates/agentguard-store" }
axum = "0.8.6"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2"
tauri-build = "2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
