[package]
name = "agentguard-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
agentguard-models.workspace = true
agentguard-policy.workspace = true
agentguard-store.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
