[package]
name = "agentguard-proxy"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentguard-daemon.workspace = true
agentguard-models.workspace = true
agentguard-policy.workspace = true
agentguard-store.workspace = true
axum.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
