[package]
name = "agentguard-desktop"
version = "1.0.0"
description = "AgentGuard desktop control room"
authors = ["AgentGuard"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "agentguard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
agentguard-models.workspace = true
agentguard-store.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
